// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert Include block Data dependent conditions should return 'a valid IDT1 block on canonical 1`] = `
Object {
  "model": Object {
    "href": "/indepthtoolkit/quizzes/123-456",
    "html": "<div>INCLUDE Markup</div><script type=\\"text/javascript\\" src=\\"localhost/idt1.js\\"></script>",
    "index": 0,
    "isAmpSupported": false,
    "type": "idt1",
  },
  "type": "include",
}
`;

exports[`Convert Include block Data dependent conditions should return a valid IDT2 block on canonical 1`] = `
Object {
  "model": Object {
    "href": "/idt2/111-222-333-444-555",
    "html": "<div>INCLUDE Markup</div><script type=\\"text/javascript\\" src=\\"localhost/idt1.js\\"></script>",
    "imageBlock": Object {
      "alt": "image alt text",
      "height": 1864,
      "layout": "responsive",
      "src": "https://foobar.com/includes/idt2/111-222-333-444-555/image/816",
      "srcset": "https://foobar.com/includes/idt2/111-222-333-444-555/image/470 470w,https://foobar.com/includes/idt2/111-222-333-444-555/image/816 816w",
      "width": 1632,
    },
    "index": 1,
    "isAmpSupported": true,
    "type": "idt2",
  },
  "type": "include",
}
`;

exports[`Convert Include block Data dependent conditions should return a valid VJ block on canonical 1`] = `
Object {
  "model": Object {
    "href": "/include/111-222-333-444-555",
    "html": "<div>INCLUDE Markup</div><script type=\\"text/javascript\\" src=\\"localhost/idt1.js\\"></script>",
    "index": 2,
    "isAmpSupported": true,
    "type": "vj",
  },
  "type": "include",
}
`;

exports[`Convert Include block Data dependent conditions should return a valid VJ supported block on amp 1`] = `
Object {
  "model": Object {
    "ampMetadata": Object {
      "image": "https://news.files.bbci.co.uk/vj/live/idt-images/image-slider-asdf/app_launcher_ws_640_7ania.png",
      "imageHeight": "360",
      "imageWidth": "640",
      "src": "https://news.files.bbci.co.uk/include/newsspec/21841-green-diet/gahuza/app/amp?responsive=true&newsapps=true&app-image=https://news.files.bbci.co.uk/vj/live/idt-images/image-slider-asdf/app_launcher_ws_640_7ania.png&app-clickable=true&amp-clickable=true&amp-image-height=360&amp-image-width=640&amp-image=https://news.files.bbci.co.uk/vj/live/idt-images/image-slider-asdf/app_launcher_ws_640_7ania.png",
    },
    "href": "/include/newsspec/21841-green-diet/gahuza/app?responsive=true&newsapps=true&app-image=https://news.files.bbci.co.uk/vj/live/idt-images/image-slider-asdf/app_launcher_ws_640_7ania.png&app-clickable=true&amp-clickable=true&amp-image-height=360&amp-image-width=640&amp-image=https://news.files.bbci.co.uk/vj/live/idt-images/image-slider-asdf/app_launcher_ws_640_7ania.png",
    "index": 5,
    "isAmpSupported": true,
    "type": "vj",
  },
  "type": "include",
}
`;

exports[`Convert Include block Data dependent conditions should return null for non-supported include block on canonical 1`] = `null`;

exports[`Convert Include block Data dependent conditions should return null include block without href on canonical 1`] = `null`;

exports[`Convert Include block Data dependent conditions should return null non-supported VJ block on amp 1`] = `
Object {
  "model": Object {
    "href": "/news/special/2016/newsspec_14813/content/iframe/gahuza/us-gop.inc?responsive=true&app-clickable=true&app-image=http://a.files.bbci.co.uk/worldservice/live/assets/images/2016/11/09/161109092836_us_election_2nddaymaps_winner_ws_62_v3.png",
    "index": 6,
    "isAmpSupported": false,
    "type": "vj",
  },
  "type": "include",
}
`;

exports[`Convert Include block Error conditions when fetchMarkup returns null 1`] = `
Object {
  "model": Object {
    "href": "/idt2/111-222-333-444-555",
    "imageBlock": Object {
      "alt": "image alt text",
      "height": 1864,
      "layout": "responsive",
      "src": "https://foobar.com/includes/idt2/111-222-333-444-555/image/816",
      "srcset": "https://foobar.com/includes/idt2/111-222-333-444-555/image/470 470w,https://foobar.com/includes/idt2/111-222-333-444-555/image/816 816w",
      "width": 1632,
    },
    "index": 1,
    "isAmpSupported": true,
    "type": "idt2",
  },
  "type": "include",
}
`;

exports[`Convert Include block Error conditions when getImageBlock returns null 1`] = `
Object {
  "model": Object {
    "href": "/idt2/111-222-333-444-555",
    "html": "<div>INCLUDE Markup</div><script type=\\"text/javascript\\" src=\\"localhost/idt1.js\\"></script>",
    "index": 1,
    "isAmpSupported": true,
    "type": "idt2",
  },
  "type": "include",
}
`;
